--- a/sass/blocks/_about.sass
+++ b/sass/blocks/_about.sass
@@ -31,6 +31,7 @@
     font-size: 15px
     color: #48555B
     letter-spacing: 1.5px
+    max-width: 450px
   &__button
     background-color: $primary
     color: #fff
