--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -54,7 +54,10 @@
     margin-top: 10px
     font-family: 'Open Sans', sans-serif
     margin-right: 20px
+    margin-top: 0px
     display: flex
+    text-decoration: none
+    color: inherit
     &-wrapper
       min-width: 25px
   &__link
