--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -14,16 +14,15 @@
     align-items: center
     justify-content: center
   &__title
-    padding: 5px
     font-style: normal
     font-weight: bold
     font-size: 20px
-    line-height: 36px
     color: $primary
     background: rgba(255, 255, 255, 0.76)
-    margin-bottom: 30px
+    margin-bottom: 20px
     text-align: center
     filter: drop-shadow(15px 10px 14px #183B56)
+    max-width: 300px
   &__link
     padding: 11px 4px
     font-style: normal
