--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -43,6 +43,7 @@ img
 
   button
     transition: 0.4s
+    white-space: nowrap
     &:hover, &:focus
       outline: none
       box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2), 0 2px 8px 0 rgba(0,0,0,0.19)
