--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -263,6 +263,8 @@
   .geography
     &__title
       font-size: 18px
+    &__modal-title, &__text
+      font-size: 8px
   .footer
     &__menu-title
       font-size: 14px
