--- a/sass/blocks/_geography.sass
+++ b/sass/blocks/_geography.sass
@@ -45,10 +45,10 @@
       left: 31%
   &__map-modal
     position: absolute
-    left: 100%
+    right: 100%
     bottom: 100%
     background: #fff
-    min-width: 220px
+
     padding: 5px
     z-index: 10
     margin-bottom: 10px
