fixed: responsive for everything

--- a/sass/blocks/_methods.sass
+++ b/sass/blocks/_methods.sass
@@ -23,6 +23,7 @@
     max-height: 500px
     max-width: 350px
     position: relative
+    margin-bottom: 20px
   &__image
     // border-radius: 25px
     object-fit: cover
@@ -47,5 +48,6 @@
     text-decoration: none
     cursor: pointer
     border-radius: 4px
+    -webkit-appearance: none !important
     &:hover
       box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
