--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -6,7 +6,9 @@
   .footer-container,
   .breadcrumb-container,
   .main-info__container,
-  .contacts-container
+  .company-container,
+  .contacts-container,
+  .technologies-container
     max-width: 92%
   .hero
     &__title
@@ -24,8 +26,10 @@
   .breadcrumb-container,
   .main-info__container,
   .contacts-container,
-  .company-container
-  .methods-container
+  .about-container,
+  .company-container,
+  .methods-container,
+  .technologies-container
     max-width: 90%
   .header
     &__logo
@@ -38,7 +42,6 @@
 
   .hero
     &__title
-      // max-width: 700px
       font-size: 25px
     &__link
       padding: 8px 18px
@@ -76,8 +79,6 @@
       max-width: 500px
     &__wrapper
       flex-basis: 50%
-    &-slide
-      gap: 20px
     &__image-wrapper
       max-width: 300px
     &__button
@@ -95,14 +96,13 @@
       font-size: 13px
       width: 330px
   .contacts
-    &__form
-      max-width: 50%
+
     &__input-group
       flex-basis: 100%
     &__text, &__link
       font-size: 12px
   .map
-    height: 350px
+    height: 300px
 
 @media (max-width: 767px)
   body
@@ -204,19 +204,34 @@
       min-width: 100%
     &__employe-text
       font-size: 18px
-
+  .company
+    &__title
+      font-size: 22px
+    &__text
+      font-size: 14px
+    &__text-wrapper
+      padding: 10px
+  .technologies
+    &__title
+      font-size: 22px
+    &__text
+      font-size: 13px
+      &--center
+        font-size: 15px
   .contacts
     &__title
       font-size: 22px
       &--little
         font-size: 18px
     &__content
-      flex-wrap: wrap
-      padding-left: 20px
-      padding-right: 20px
+      flex-wrap: wrap-reverse
     &__form
       max-width: 100%
       margin-right: 0
+      &-group
+        flex-basis: 100%
+    &__map-blocks
+      flex-basis: 100%
     &__address
       &-wrapper
         justify-content: space-evenly
@@ -241,6 +256,7 @@
     &__span
       color: #fff
       font-size: 12px
+      text-shadow: 1px 1px black
   .about
     &__title
       font-size: 18px
@@ -259,12 +275,40 @@
   .methods
     padding: 30px 0 0 0
     &__button
-      padding: 8px
+      padding: 10px
+      font-size: 10px
   .geography
     &__title
       font-size: 18px
     &__modal-title, &__text
       font-size: 8px
+    &__map-container
+      position: absolute
+      width: 2.2%
+      &--yamburg
+        top: 48%
+        left: 43%
+      &--zapolarka
+        top: 50%
+        left: 46%
+      &--sahalin
+        top: 60%
+        right: 7%
+      &--tatarstan
+        top: 63%
+        left: 24%
+      &--orenburg
+        top: 73%
+        left: 24%
+      &--samara
+        top: 66%
+        left: 21%
+      &--neneckiy
+        top: 37%
+        left: 31%
+      &--komi
+        top: 45%
+        left: 31%
   .footer
     &__menu-title
       font-size: 14px
@@ -273,12 +317,26 @@
     &__text
       font-size: 12px
       max-width: 230px
-  .main-info
-    &__employe
-      &-wrapper
-        gap: 20px
+
   .contacts
     padding-top: 10px
+    &__icon
+      width: 20px
+  .mobile
+    padding: 20px
+    &__link
+      font-size: 14px
+
+  .swiper-container
+    min-height: 700px
+
+  .company
+    &__title
+      font-size: 20px
+    &__text, &__item
+      font-size: 13px
+    &__wrapper
+      gap: 10px
 
 @media ( max-height: 487px )
   .mobile
@@ -305,6 +363,7 @@
       font-size: 10px
     &__info
       font-size: 10px
+
 @media ( max-width: 390px )
   .header
     &__logo
@@ -335,6 +394,38 @@
     &__image
       &-wrapper
         margin-right: 15px
+  .methods
+    &__button
+      padding: 8px
+  .geography
+    padding-top: 40px
+    &__map-container
+      position: absolute
+      width: 2.5%
+      &--yamburg
+        top: 46%
+        left: 43%
+      &--zapolarka
+        top: 45%
+        left: 45%
+      &--sahalin
+        top: 56%
+        right: 7%
+      &--tatarstan
+        top: 60%
+        left: 24%
+      &--orenburg
+        top: 69%
+        left: 24%
+      &--samara
+        top: 63%
+        left: 21%
+      &--neneckiy
+        top: 34%
+        left: 31%
+      &--komi
+        top: 42%
+        left: 31%
   .main-info
     padding-top: 0
   .contacts
@@ -342,5 +433,15 @@
       flex-wrap: wrap
     &__button
       margin-bottom: 10px
+    &__text, &__link
+      font-size: 11px
   .map
     height: 250px
+
+  .company
+    &__title
+      font-size: 18px
+    &__text, &__item
+      font-size: 12px
+    &__info
+      margin-top: 160px
