--- a/sass/blocks/_company.sass
+++ b/sass/blocks/_company.sass
@@ -1,6 +1,6 @@
 .company
   padding-top: 20px
-  padding-bottom: 170px
+  padding-bottom: 70px
   &-container
     max-width: 1170px
     margin: auto
@@ -20,6 +20,7 @@
     display: flex
     justify-content: center
     gap: 20px
+    min-height: 500px
   &__text
     font-style: normal
     // font-weight: lighter
@@ -35,6 +36,7 @@
       height: max-content
       bottom: -125px
       text-align: center
+
   &__description
     padding: 20px
     max-width: 100%
@@ -59,6 +61,6 @@
     background-color: #fff
   &__images
     &-wrapper
-      max-width: 60%
+      // max-width: 60%
       margin: auto
       margin-top: 40px
