--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -30,7 +30,7 @@
     display: flex
     flex-wrap: wrap
     align-items: baseline
-    height: 250px
+    height: 290px
     border: 1px solid hsla(206, 56, 22, 0.2)
     border-radius: 4px
     background-color: #fff
@@ -63,7 +63,6 @@
     margin-top: 30px
     gap: 19px
     background-color: #fff
-    margin-right: 20px
     border-radius: 4px
   &__content
     display: flex
@@ -72,7 +71,7 @@
     gap: 20px
   &__input-group
     margin-bottom: 5px
-    flex-basis: 48%
+    flex-basis: 47%
     &:hover
       box-shadow: 0 0 7px $primary
       transition: 0.3s
@@ -83,7 +82,7 @@
     flex-basis: 100%
   &__form-group
     flex-basis: 50%
-    height: 450px
+    // height: 450px
   &__message
     flex-basis: 100%
     height: 262px
@@ -136,7 +135,7 @@
   height: 250px
   border-radius: 4px
   overflow: hidden
-  margin-top: 30px
+  margin-top: 40px
   border: 1px solid hsla(206, 56, 22, .3)
   &__frame
     width: 100%
