--- a/sass/blocks/_geography.sass
+++ b/sass/blocks/_geography.sass
@@ -48,7 +48,6 @@
     right: 100%
     bottom: 100%
     background: #fff
-
     padding: 5px
     z-index: 10
     margin-bottom: 10px
@@ -70,8 +69,8 @@
 
 .geography__map-link:hover
   filter: grayscale(0.2) saturate(2)
-  transition: 0.5s
-  border: 1px solid white
+  // transition: 0.5s
+  // border: 1px solid white
 
 .geography__map-container:hover .geography__map-modal
   display: block
