--- a/sass/blocks/_mobile.sass
+++ b/sass/blocks/_mobile.sass
@@ -22,7 +22,8 @@
     line-height: 22px
     text-decoration: none
     margin-bottom: 20px
-
+    &:last-child
+      margin-bottom: 0
   &__nav
     display: flex
     flex-direction: column
