--- a/sass/blocks/_technologies.sass
+++ b/sass/blocks/_technologies.sass
@@ -1,4 +1,5 @@
 .technologies
+  padding-top: 20px
   padding-bottom: 50px
   &-container
     max-width: 1170px
@@ -46,10 +47,10 @@
     background-color: #fff
   &__images-wrapper
     display: flex
-    justify-content: center
+    justify-content: space-evenly
     align-items: center
-    gap: 30px
+    gap: 10px
   &__image-wrapper
     margin-top: 20px
     margin-bottom: 30px
-    // width: 25%
+    flex-basis: 27%
