--- a/sass/blocks/_method-grp.sass
+++ b/sass/blocks/_method-grp.sass
@@ -7,7 +7,7 @@
   &__title
     font-style: normal
     font-weight: bold
-    font-size: 23px
+    font-size: 22px
     text-transform: uppercase
     color: $primary
     text-align: center
@@ -79,7 +79,14 @@
   &__text-title
     margin-bottom: 30px
     font-weight: bold
+    font-size: 16px
   &__description
     font-style: italic
     font-size: 14px
     max-width: 90%
+  &__gif
+    display: block
+    margin: auto
+    margin-top: 20px
+    width: 500px
+    height: 300px
