--- a/sass/blocks/_methods.sass
+++ b/sass/blocks/_methods.sass
@@ -24,19 +24,19 @@
     max-width: 350px
     position: relative
     margin-bottom: 20px
+    margin-right: 20px
   &__image
-    // border-radius: 25px
     object-fit: cover
   &__text
-    line-height: 2.7
+    line-height: 2.35
     margin-bottom: 20px
     font-size: 14px
-    font-style: italic
+    // font-style: italic
     &-wrapper
       flex-basis: 60%
     &-title
       margin-bottom: 20px
-      font-style: italic
+      // font-style: italic
   &__button
     background-color: transparent
     border: 0.5px solid $primary
