--- a/sass/blocks/_company.sass
+++ b/sass/blocks/_company.sass
@@ -19,14 +19,16 @@
     position: relative
     display: flex
     justify-content: center
-    gap: 20px
     min-height: 500px
+    margin-right: 20px
+    &:last-child
+      margin-right: 0
   &__text
     font-style: normal
-    // font-weight: lighter
     font-size: 15px
     color: #48555B
     letter-spacing: 1.5px
+    margin-bottom: 20px
     &-wrapper
       max-width: 75%
       position: absolute
@@ -52,7 +54,6 @@
     margin-top: 15px
     color: $primary
     font-size: 14px
-    // font-weight: lighter
   &__info
     padding: 20px
     max-width: 100%
@@ -61,6 +62,8 @@
     background-color: #fff
   &__images
     &-wrapper
-      // max-width: 60%
       margin: auto
       margin-top: 40px
+  &__image-wrapper
+    &:first-child
+      margin-right: 20px
