--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -25,6 +25,7 @@
     filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(148deg) brightness(55%) contrast(97%)
   &__map-blocks
     flex-basis: 50%
+    margin-right: 30px
   &__blocks
     padding: 20px
     display: flex
@@ -37,9 +38,9 @@
     &-wrapper
       display: flex
       flex-direction: column
-      flex-basis: 50%
+      flex-basis: 49%
       margin-bottom: 20px
-
+      margin-right: 1px
   &__text
     font-style: normal
     font-weight: normal
@@ -51,7 +52,6 @@
     text-decoration: none
     color: $primary
     font-size: 14px
-
   &__form
     height: 100%
     margin-top: 30px
@@ -60,26 +60,28 @@
     flex-wrap: wrap
     padding: 20px
     border: 1px solid hsla(206, 56, 22, 0.2)
-    margin-top: 30px
-    gap: 19px
     background-color: #fff
     border-radius: 4px
+    margin-bottom: 20px
+    margin-right: 10px
   &__content
     display: flex
     align-items: flex-start
     justify-content: space-between
-    gap: 20px
   &__input-group
     margin-bottom: 5px
-    flex-basis: 47%
+    flex-basis: 49%
+    &:first-child
+      margin-right: 9px
     &:hover
       box-shadow: 0 0 7px $primary
       transition: 0.3s
   &__container
     display: flex
-    align-items: center
+    align-items: baseline
     justify-content: space-between
     flex-basis: 100%
+    margin-top: 15px
   &__form-group
     flex-basis: 50%
     // height: 450px
@@ -100,10 +102,7 @@
   &__input
     padding: 20px 18px
     border-radius: 4px
-    font-style: normal
-    font-weight: normal
-    font-size: 14px
-    line-height: 15px
+    font-size: 12px
     outline: none
     width: 100%
     border: 1px solid hsla(206, 56, 22, 0.2)
@@ -117,7 +116,6 @@
     color: $primary
     border-radius: 4px
     border-color: hsla(206, 56, 22, 0.2)
-    // border: 1px solid
     font-style: normal
     font-weight: bold
     font-size: 12px
@@ -125,7 +123,7 @@
     cursor: pointer
     white-space: nowrap
     &:hover
-      box-shadow: 0 0 12px hsla(206, 56, 22, 1 )
+      box-shadow: 0 0 4px hsla(206, 56, 22, 1 )
       color: $primary
   &__info
     font-size: 12px
@@ -135,7 +133,7 @@
   height: 250px
   border-radius: 4px
   overflow: hidden
-  margin-top: 40px
+  margin-top: 25px
   border: 1px solid hsla(206, 56, 22, .3)
   &__frame
     width: 100%
