--- a/sass/blocks/_method-svan.sass
+++ b/sass/blocks/_method-svan.sass
@@ -4,10 +4,12 @@
   &__container
     max-width: 1170px
     margin: auto
+  &__swiper
+    min-height: 450px
   &__title
     font-style: normal
     font-weight: bold
-    font-size: 23px
+    font-size: 22px
     text-transform: uppercase
     color: $primary
     text-align: center
@@ -27,7 +29,7 @@
     margin-top: 30px
     display: flex
     justify-content: center
-    grid-gap: 30px
+
   &__link
     text-decoration: none
     color: $primary
@@ -79,3 +81,7 @@
   &__image
     object-fit: cover
     height: 360px
+  &__spectrums
+    margin-right: 30px
+    &:last-child
+      margin-right: 0
