--- a/sass/blocks/_technologies.sass
+++ b/sass/blocks/_technologies.sass
@@ -6,7 +6,7 @@
     margin: auto
   &__title
     font-style: normal
-    font-size: 23px
+    font-size: 22px
     text-transform: uppercase
     color: $primary
     text-align: center
@@ -16,7 +16,7 @@
     &--little
       font-style: normal
       margin-top: 30px
-      font-size: 15px
+      font-size: 18px
       color: $primary
       margin-left: 10px
       margin-top: 25px
@@ -25,8 +25,7 @@
     margin-top: 20px
     background-color: #fff
     font-style: normal
-    // font-weight: lighter
-    font-size: 14px
+    font-size: 16px
     color: #48555B
     letter-spacing: 1.5px
     border-left: 2px solid
@@ -35,22 +34,28 @@
     &--center
       text-align: center
       border: none
-      font-size: 17px
+      font-size: 20px
   &__main-wrapper
     margin: auto
     margin-top: 20px
     max-width: 85%
-  &__image
+  &__image-field
     object-fit: cover
     height: 350px
+    width: 300px
+    margin-bottom: 10px
   &__info
     background-color: #fff
+    padding-bottom: 10px
   &__images-wrapper
     display: flex
     justify-content: space-evenly
     align-items: center
-    gap: 10px
+    flex-wrap: wrap
+    margin-top: 20px
   &__image-wrapper
     margin-top: 20px
     margin-bottom: 30px
-    flex-basis: 27%
+    margin-right: 20px
+    &:last-child
+      margin-right: 0
