--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -19,7 +19,7 @@ img
   height: 550px
 
 .grp-container
-  height: 550px
+  height: 600px
 
 .hidden
   overflow: hidden
@@ -57,3 +57,7 @@ img
   border-bottom: 1px solid #EC1F46
   font-size: 11px
   position: relative
+
+.zoom
+  transition: 0.5s
+  transform: scale(2)
