--- a/sass/blocks/_methods.sass
+++ b/sass/blocks/_methods.sass
@@ -31,11 +31,12 @@
     line-height: 2.35
     margin-bottom: 20px
     font-size: 14px
-    // font-style: italic
+    color: #8b8ea7
     &-wrapper
       flex-basis: 60%
     &-title
       margin-bottom: 20px
+      color: $primary
       // font-style: italic
   &__button
     background-color: transparent
