--- a/sass/blocks/_technologies.sass
+++ b/sass/blocks/_technologies.sass
@@ -44,6 +44,9 @@
     height: 350px
     width: 300px
     margin-bottom: 10px
+    &:active
+      transition: 0.5s
+      transform: scale(150%)
   &__info
     background-color: #fff
     padding-bottom: 10px
