--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,7 +10,7 @@
   .contacts-container,
   .technologies-container,
   .method-grp__container,
-  .method-msi__containerб
+  .method-svan__containerб
   .thankyou
     max-width: 92%
   .hero
@@ -41,7 +41,7 @@
   .methods-container,
   .technologies-container,
   .method-grp__container,
-  .method-msi__container
+  .method-svan__container
     max-width: 90%
   .header
     &__logo
@@ -269,7 +269,7 @@
     width: 100%
 
   .methods-container
-    min-height: 650px
+    min-height: 730px
 
   .technologies
     &__image-wrapper
@@ -286,12 +286,19 @@
       max-width: 100%
     &__text,&__item
       font-size: 14px
-  .grp-container
-    min-height: 600px
 
-  .method-msi
+  .grp-container
+    min-height: 720px
+
+  .method-svan
     &__text,&__item
       font-size: 14px
+    &__spectrums
+      margin-right: 0
+      margin-bottom: 20px
+      height: auto
+      &:last-child
+        margin-bottom: 0
 
 @media ( max-width: 576px )
   .hero
@@ -378,15 +385,16 @@
     &__link
       font-size: 14px
 
-  .methods-container
-    min-height: 700px
-
   .company
     &__title
       font-size: 20px
     &__text, &__item
       font-size: 13px
-
+    &__text-wrapper
+      max-width: 94%
+      bottom: -28px
+    &__info
+      margin-top: 70px
   .technologies
     &__title
       font-size: 20px
@@ -417,10 +425,13 @@
       padding-left: 20px
       padding-right: 20px
 
-  .method-msi
+  .method-svan
     &__image-wrapper
       flex-wrap: wrap
-      max-width: 80%
+      -webkit-flex-wrap: wrap
+      -webkit-align-items: center
+      align-items: center
+      max-width: 100%
     &__title
       font-size: 20px
     &__text
@@ -439,11 +450,12 @@
       font-size: 11px
     &__results
       padding-left: 20px
-    &__spectrums
-      margin-right: 0
-      margin-bottom: 20px
-    &:last-child
-      margin-bottom: 0
+
+    &__description
+      max-width: 100%
+    &__gif
+      width: 100%
+      height: 100px
 
 @media ( max-height: 487px )
   .mobile
@@ -550,8 +562,6 @@
       font-size: 18px
     &__text, &__item
       font-size: 12px
-    &__info
-      margin-top: 160px
 
   .technologies
     &__image-wrapper
@@ -564,12 +574,16 @@
       margin-top: 20px
     &__images
       margin: 0
+      margin-bottom: 20px
+      max-width: 100%
 
-  .method-msi
+  .method-svan
     &__swiper
       min-height: 680px
     &__description
       margin-right: 0
+    &__spectrums
+      max-width: 92%
 
 @media ( max-width: 320px )
   .method-msi
