--- a/sass/blocks/_company.sass
+++ b/sass/blocks/_company.sass
@@ -20,15 +20,11 @@
     display: flex
     justify-content: center
     min-height: 500px
-    margin-right: 20px
-    &:last-child
-      margin-right: 0
   &__text
     font-style: normal
     font-size: 15px
     color: #48555B
     letter-spacing: 1.5px
-    margin-bottom: 20px
     &-wrapper
       max-width: 75%
       position: absolute
@@ -38,7 +34,6 @@
       height: max-content
       bottom: -125px
       text-align: center
-
   &__description
     padding: 20px
     max-width: 100%
@@ -67,3 +62,5 @@
   &__image-wrapper
     &:first-child
       margin-right: 20px
+  &__image
+    max-height: 750px
