--- a/sass/blocks/_method-grp.sass
+++ b/sass/blocks/_method-grp.sass
@@ -80,10 +80,12 @@
     margin-bottom: 30px
     font-weight: bold
     font-size: 16px
+    color: $primary
   &__description
-    font-style: italic
+    // font-style: italic
     font-size: 14px
     max-width: 90%
+    color: #8b8ea7
   &__gif
     display: block
     margin: auto
