--- a/sass/blocks/_method-svan.sass
+++ b/sass/blocks/_method-svan.sass
@@ -1,4 +1,4 @@
-.method-msi
+.method-svan
   padding-top: 10px
   padding-bottom: 30px
   &__container
@@ -24,12 +24,17 @@
     padding: 20px
     letter-spacing: 1.5px
   &__image-wrapper
-    max-width: 40%
-    margin: auto
     margin-top: 30px
+    flex-direction: row
+    -webkit-flex-direction: row
+    display: -webkit-box
+    display: -webkit-flex
     display: flex
     justify-content: center
-
+    -webkit-align-items: flex-start
+    align-items: flex-start
+    justify-content: center
+    flex-wrap: wrap
   &__link
     text-decoration: none
     color: $primary
@@ -74,14 +79,18 @@
   &__text-title
     margin-bottom: 30px
     font-weight: bold
+    color: $primary
   &__description
-    font-style: italic
+    color: #8b8ea7
     font-size: 14px
     max-width: 90%
   &__image
     object-fit: cover
-    height: 360px
   &__spectrums
     margin-right: 30px
+    width: 400px
+    align-self: normal
     &:last-child
       margin-right: 0
+  &__gif
+    width: 500px
