--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -129,6 +129,13 @@
       &--center
         font-size: 16px
 
+@media (max-width: 922px)
+  .method-svan
+    &__spectrums
+      flex-wrap: wrap
+      &--first
+        margin-right: 1px
+
 @media (max-width: 767px)
   body
     padding-top: 80px
