--- a/sass/blocks/_method-svan.sass
+++ b/sass/blocks/_method-svan.sass
@@ -25,6 +25,7 @@
     letter-spacing: 1.5px
   &__image-wrapper
     margin-top: 30px
+    margin-bottom: 10px
     flex-direction: row
     -webkit-flex-direction: row
     display: -webkit-box
@@ -35,6 +36,7 @@
     align-items: flex-start
     justify-content: center
     flex-wrap: wrap
+
   &__link
     text-decoration: none
     color: $primary
@@ -90,6 +92,7 @@
     margin-right: 30px
     width: 400px
     align-self: normal
+    margin-bottom: 20px
     &:last-child
       margin-right: 0
   &__gif
