--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -294,8 +294,8 @@
     &__text,&__item
       font-size: 14px
 
-  .grp-container
-    min-height: 720px
+  // .grp-container
+  //   min-height: 720px
 
   .method-svan
     &__text,&__item
