--- a/sass/blocks/_method-grp.sass
+++ b/sass/blocks/_method-grp.sass
@@ -23,14 +23,6 @@
     letter-spacing: 1.5px
   &__image
     object-fit: cover
-    &-wrapper
-      max-width: 40%
-      margin: auto
-      margin-top: 30px
-      display: flex
-      justify-content: center
-      align-items: center
-      grid-gap: 30px
   &__link
     text-decoration: none
     color: blue
@@ -71,11 +63,21 @@
     width: 1100px
   &__images
     flex-basis: 50%
-    margin-right: 10px
+    margin-right: 40px
     margin-left: 25px
   &__text-wrapper
     flex-basis: 55%
     margin-right: 15px
+    overflow: auto
+  &__image-wrapper
+    max-width: 40%
+    margin: auto
+    margin-top: 30px
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-bottom: 30px
+    /* grid-gap: 30px;  
   &__text-title
     margin-bottom: 30px
     font-weight: bold
