--- a/sass/blocks/_method-svan.sass
+++ b/sass/blocks/_method-svan.sass
@@ -91,7 +91,7 @@
   &__spectrums
     margin-right: 30px
     width: 400px
-    align-self: normal
+    height: auto
     margin-bottom: 20px
     &:last-child
       margin-right: 0
